clusters/my-cluster/bi/dornoc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dornoc-test
  labels:
    app: mopo
  name: dornoc-deployment-v1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dornoc-v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dornoc-v1
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: dornoc-config-v1
        - secretRef:
            name: dornoc-secret
        image: docker.io/library/dornoc:1.1.1
        imagePullPolicy: IfNotPresent
        name: dornoc
        ports:
        - containerPort: 5000
          name: 5000tcp2
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - image: redis:3-alpine
        imagePullPolicy: Always
        name: redis
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
