clusters/my-cluster/bi/dornoc/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dornoc-test
  name: dornoc-service-v1
  labels:
    app: dornoc-v1
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: dornoc-v1
